Finished requested changes